crates/ruff_python_parser/tests/snapshots/invalid_syntax@f_string_invalid_starred_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/f_string_invalid_starred_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..112,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 77..83,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 77..83,
                            value: FStringValue {
                                inner: Single(
                                    FString {
                                        range: 77..83,
                                        node_index: NodeIndex(None),
                                        elements: [
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 79..82,
                                                    node_index: NodeIndex(None),
                                                    expression: Starred(
                                                        ExprStarred {
                                                            node_index: NodeIndex(None),
                                                            range: 80..81,
                                                            value: Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 81..81,
                                                                    id: Name(""),
                                                                    ctx: Invalid,
                                                                },
                                                            ),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Double,
                                            prefix: Regular,
                                            triple_quoted: false,
                                            unclosed: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 84..97,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 84..97,
                            value: FStringValue {
                                inner: Single(
                                    FString {
                                        range: 84..97,
                                        node_index: NodeIndex(None),
                                        elements: [
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 86..96,
                                                    node_index: NodeIndex(None),
                                                    expression: Starred(
                                                        ExprStarred {
                                                            node_index: NodeIndex(None),
                                                            range: 87..95,
                                                            value: BoolOp(
                                                                ExprBoolOp {
                                                                    node_index: NodeIndex(None),
                                                                    range: 88..95,
                                                                    op: And,
                                                                    values: [
                                                                        Name(
                                                                            ExprName {
                                                                                node_index: NodeIndex(None),
                                                                                range: 88..89,
                                                                                id: Name("x"),
                                                                                ctx: Load,
                                                                            },
                                                                        ),
                                                                        Name(
                                                                            ExprName {
                                                                                node_index: NodeIndex(None),
                                                                                range: 94..95,
                                                                                id: Name("y"),
                                                                                ctx: Load,
                                                                            },
                                                                        ),
                                                                    ],
                                                                },
                                                            ),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Double,
                                            prefix: Regular,
                                            triple_quoted: false,
                                            unclosed: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 98..111,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 98..111,
                            value: FStringValue {
                                inner: Single(
                                    FString {
                                        range: 98..111,
                                        node_index: NodeIndex(None),
                                        elements: [
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 100..110,
                                                    node_index: NodeIndex(None),
                                                    expression: Starred(
                                                        ExprStarred {
                                                            node_index: NodeIndex(None),
                                                            range: 101..109,
                                                            value: Yield(
                                                                ExprYield {
                                                                    node_index: NodeIndex(None),
                                                                    range: 102..109,
                                                                    value: Some(
                                                                        Name(
                                                                            ExprName {
                                                                                node_index: NodeIndex(None),
                                                                                range: 108..109,
                                                                                id: Name("x"),
                                                                                ctx: Load,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Double,
                                            prefix: Regular,
                                            triple_quoted: false,
                                            unclosed: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Starred expression inside f-string has a minimum precedence of bitwise or.
2 | f"{*}"
  |     ^ Syntax Error: Expected an expression
3 | f"{*x and y}"
4 | f"{*yield x}"
  |


  |
1 | # Starred expression inside f-string has a minimum precedence of bitwise or.
2 | f"{*}"
3 | f"{*x and y}"
  |     ^^^^^^^ Syntax Error: Boolean expression cannot be used here
4 | f"{*yield x}"
  |


  |
2 | f"{*}"
3 | f"{*x and y}"
4 | f"{*yield x}"
  |     ^^^^^^^ Syntax Error: Yield expression cannot be used here
